# cv_winter_camp_2022

./: .gitmodules  CMakeLists.txt  PITCHME.css  PITCHME.md  PITCHME.yaml  README.md  Resutlts.txt
.github/workflows/: main.yml
include/: algo.hpp
perf/: perf_robert.cpp  perf_roberts.cpp
project/: CMakeLists.txt
project/include/: algo.hpp
project/perf/: perf_algo.cpp  perf_bgr2gray.cpp  perf_main.cpp  perf_prewitt.cpp
project/src/: bgr2gray.cpp  prewitt.cpp  roberts.cpp
project/test/: test_algo.cpp  test_bgr2gray.cpp  test_intrin.cpp  test_prewitt.cpp
src/: prewitt.cpp  roberts.cpp
test/: test_bgr2gray.cpp  test_main.cpp  test_robert.cpp  test_roberts.cpp
